argocd/hiae/prd/manifests/apps/shared-api-forms/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shared-api-forms
  name: shared-api-forms
  namespace: apps-shared-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shared-api-forms
  template:
    metadata:
      labels:
        app: shared-api-forms
    spec:
      containers:
      - image: 264221247403.dkr.ecr.sa-east-1.amazonaws.com/shared-api-forms:29ba08
        imagePullPolicy: IfNotPresent
        name: shared-api-forms-app
        ports:
        - containerPort: 3000
          protocol: TCP
        envFrom:
          - secretRef:
              name: shared-api-forms
              optional: true
