argocd/hiae/prd/manifests/apps/shared-api-forms/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shared-api-forms
  namespace: apps-shared-api
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: shared-api-forms
